sumo/tests/sumo/errors/network/edge/cedge/root__edge__cedge#id__ungiven1/errors.sumo
Error: Missing id of an cedge-object.
Quitting (on error).
